--- a/iOS-sample-app/Base.lproj/Main.storyboard
+++ b/iOS-sample-app/Base.lproj/Main.storyboard
@@ -106,14 +106,35 @@
                     <view key="view" contentMode="scaleToFill" id="tzd-tA-RQ0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jPp-jC-uA9">
+                                <rect key="frame" x="182.5" y="432.5" width="51" height="31"/>
+                                <connections>
+                                    <action selector="colorSwitchChanged:" destination="Yob-oZ-Oow" eventType="primaryActionTriggered" id="Hlc-bQ-3sf"/>
+                                </connections>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7N6-a8-1WH">
+                                <rect key="frame" x="153.5" y="355" width="107" height="30"/>
+                                <state key="normal" title="Buy something!"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jPp-jC-uA9" firstAttribute="centerX" secondItem="tzd-tA-RQ0" secondAttribute="centerX" id="VK2-3A-fAo"/>
+                            <constraint firstItem="7N6-a8-1WH" firstAttribute="centerX" secondItem="tzd-tA-RQ0" secondAttribute="centerX" id="YTq-I4-5PA"/>
+                            <constraint firstItem="jPp-jC-uA9" firstAttribute="centerY" secondItem="tzd-tA-RQ0" secondAttribute="centerY" id="l8F-qT-GXn"/>
+                            <constraint firstItem="jPp-jC-uA9" firstAttribute="top" secondItem="7N6-a8-1WH" secondAttribute="bottom" constant="47.5" id="sI0-1i-4Qj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="XPP-Al-dZD"/>
                     </view>
                     <navigationItem key="navigationItem" title="Dynamic Vars" id="uMi-Tj-MI2"/>
+                    <connections>
+                        <outlet property="buyButton" destination="7N6-a8-1WH" id="CHC-Nl-xyo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LYb-VC-Ghq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3099" y="624"/>
+            <point key="canvasLocation" x="3098.5507246376815" y="623.4375"/>
         </scene>
     </scenes>
 </document>
