--- a/iOS-sample-app/Base.lproj/Main.storyboard
+++ b/iOS-sample-app/Base.lproj/Main.storyboard
@@ -175,8 +175,8 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cow-sb-7PE">
                                 <rect key="frame" x="20" y="118" width="374" height="67"/>
-                                <string key="text">This class showcases how to use privacy-related APIs. You should use these functions in the UI dedicated to get the user's consent. Contentsquare does not provide such UI, you are responsible for its implementation.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <string key="text">This class showcases how to use privacy-related APIs. You are responsible for creating the UI asking the user for his consent, and then calling the appropriate Contentsquare function.</string>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -227,14 +227,21 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRp-IZ-G6s" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="476" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="dDF-vU-hlb"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLZ-37-Yab">
-                                <rect key="frame" x="189.5" y="501" width="35.5" height="21.5"/>
+                                <rect key="frame" x="189.5" y="503" width="35.5" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3E-YF-3Ns">
-                                <rect key="frame" x="20" y="555" width="374" height="18"/>
+                                <rect key="frame" x="20" y="557" width="374" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -245,12 +252,15 @@
                             <constraint firstItem="Cow-sb-7PE" firstAttribute="centerX" secondItem="QQ1-Ae-vtg" secondAttribute="centerX" id="Ul6-dw-Tgq"/>
                             <constraint firstItem="Cow-sb-7PE" firstAttribute="centerX" secondItem="QQ1-Ae-vtg" secondAttribute="centerX" id="cKS-9F-Crx"/>
                             <constraint firstItem="Cow-sb-7PE" firstAttribute="top" secondItem="YqN-oN-Sn6" secondAttribute="top" constant="30" id="cWT-9F-KEO"/>
+                            <constraint firstItem="OLZ-37-Yab" firstAttribute="top" secondItem="bRp-IZ-G6s" secondAttribute="bottom" constant="25" id="hKh-aS-sg5"/>
                             <constraint firstItem="2nN-xM-EQB" firstAttribute="firstBaseline" secondItem="Cow-sb-7PE" secondAttribute="baseline" constant="50" id="hXq-AY-iXr"/>
+                            <constraint firstItem="bRp-IZ-G6s" firstAttribute="leading" secondItem="YqN-oN-Sn6" secondAttribute="leading" id="jDb-mX-VXC"/>
                             <constraint firstItem="Cow-sb-7PE" firstAttribute="leading" secondItem="QQ1-Ae-vtg" secondAttribute="leading" constant="20" id="jtc-EC-W2C"/>
                             <constraint firstItem="T3E-YF-3Ns" firstAttribute="centerX" secondItem="QQ1-Ae-vtg" secondAttribute="centerX" id="neT-A8-hvP"/>
                             <constraint firstItem="T3E-YF-3Ns" firstAttribute="leading" secondItem="YqN-oN-Sn6" secondAttribute="leading" constant="20" id="nwD-e6-NgG"/>
-                            <constraint firstItem="OLZ-37-Yab" firstAttribute="top" secondItem="Uud-KE-3ig" secondAttribute="bottom" constant="50" id="sWf-ty-ZyA"/>
+                            <constraint firstItem="bRp-IZ-G6s" firstAttribute="top" secondItem="2nN-xM-EQB" secondAttribute="bottom" constant="25" id="poq-kW-qTX"/>
                             <constraint firstItem="OLZ-37-Yab" firstAttribute="centerX" secondItem="QQ1-Ae-vtg" secondAttribute="centerX" id="uAK-Qv-RGZ"/>
+                            <constraint firstItem="YqN-oN-Sn6" firstAttribute="trailing" secondItem="bRp-IZ-G6s" secondAttribute="trailing" id="vcm-aC-FwC"/>
                             <constraint firstItem="T3E-YF-3Ns" firstAttribute="top" secondItem="OLZ-37-Yab" secondAttribute="bottom" constant="32.5" id="wpu-Q5-VsE"/>
                             <constraint firstItem="2nN-xM-EQB" firstAttribute="centerX" secondItem="QQ1-Ae-vtg" secondAttribute="centerX" id="xZX-0W-tTM"/>
                         </constraints>
